# rn-text-size

./: README.md  package.json  react-native-random-values-jsi-helper.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/reactnativerandomvaluesjsihelper/: RandomValuesJsiHelperModule.java
android/src/main/java/com/reactnativerandomvaluesjsihelper/textSize/: RNTextSizeConf.java  RNTextSizeModule.java  RNTextSizeSpannedText.java
example/: package.json
example/src/: App.tsx
ios/: RNTextSize.h  RNTextSize.m  RandomValuesJsiHelper.h  RandomValuesJsiHelper.mm
ios/RandomValuesJsiHelper.xcodeproj/: project.pbxproj
src/: index.tsx
